add spacy import to install dict if needed

--- a/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
@@ -42,14 +42,14 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /Users/lyndefolsom/nltk_data...\n",
+      "[nltk_data]     /Users/poldrack/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "<spacy.lang.en.English at 0x16b3e6930>"
       ]
      },
      "execution_count": 1,
@@ -73,6 +73,7 @@
     "from nltk.corpus import wordnet as wn\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.tag import pos_tag\n",
+    "import spacy \n",
     "\n",
     "from propernoun import remove_proper_nouns\n",
     "from anagram_utils import (\n",
@@ -87,7 +88,9 @@
     "    check_for_doubles,\n",
     "    check_for_same\n",
     ")\n",
-    "nltk.download(\"wordnet\") # @ russ do I need this if i've already downloaded?\n"
+    "nltk.download(\"wordnet\") # @ russ do I need this if i've already downloaded?\n",
+    "\n",
+    "spacy.load('en_core_web_sm')"
    ]
   },
   {
@@ -112,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -624,9 +627,9 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python (miniconda3)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "miniconda3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -638,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
