--- a/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
@@ -42,14 +42,14 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /Users/poldrack/nltk_data...\n",
+      "[nltk_data]     /Users/lyndefolsom/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x16b3e6930>"
+       "<spacy.lang.en.English at 0x16ae87620>"
       ]
      },
      "execution_count": 1,
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -128,6 +128,7 @@
       "found 6258 words of length 6\n",
       "found 2234 words of length 4\n",
       "found 3982 words of length 5\n",
+      "found 6071 words of length 6\n",
       "found 6071 words of length 6\n"
      ]
     }
@@ -146,10 +147,10 @@
     "\n",
     "# define our curse words or other words to remove\n",
     "curse_words = [\"shit\", \"piss\", \"fuck\", \"cunt\", \"cocksucker\", \"motherfucker\", \"tits\"] #rip george carlin\n",
-    "other_words_to_remove = [\"jeus\", \"george\", \"john\"]\n",
+    "other_words_to_remove = [\"jesus\", \"george\", \"john\", 'james', 'york', 'david', 'google', 'robert', 'thomas','kill','trump' ]\n",
     "# use the remove from dict func to take those ones out\n",
     "word_dict = remove_from_dict(word_dict, curse_words) # from dictinary remove the curse words \n",
-    "word_dict = remove_from_dict(word_dict, other_words_to_remove) # from the dictionary remove the other words "
+    "word_dict = remove_from_dict(word_dict, other_words_to_remove) # from the dictionary remove the other words \n"
    ]
   },
   {
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -627,9 +628,9 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (miniconda3)",
    "language": "python",
-   "name": "python3"
+   "name": "miniconda3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -641,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
