modified:   anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb

--- a/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x16ae87620>"
+       "<spacy.lang.en.English at 0x16e6bba40>"
       ]
      },
      "execution_count": 1,
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -126,10 +126,15 @@
       "found 2310 words of length 4\n",
       "found 4095 words of length 5\n",
       "found 6258 words of length 6\n",
-      "found 2234 words of length 4\n",
-      "found 3982 words of length 5\n",
-      "found 6071 words of length 6\n",
-      "found 6071 words of length 6\n"
+      "found after removing proper nouns 2234 words of length 4\n",
+      "found after removing proper nouns 3982 words of length 5\n",
+      "found after removing proper nouns 6071 words of length 6\n",
+      "found after removing curse words 2231 words of length 4\n",
+      "found after removing curse words 3982 words of length 5\n",
+      "found after removing curse words 6071 words of length 6\n",
+      "found after removing other words2228words of length 4\n",
+      "found after removing other words3978words of length 5\n",
+      "found after removing other words6066words of length 6\n"
      ]
     }
    ],
@@ -143,14 +148,21 @@
     "# making a loop through the word dic to use the remove proper nouns function\n",
     "for wordlength in word_dict:\n",
     "    word_dict[wordlength] = remove_proper_nouns(word_dict[wordlength])\n",
-    "    print(f'found {len(word_dict[wordlength])} words of length {wordlength}')\n",
+    "    print(f'found after removing proper nouns {len(word_dict[wordlength])} words of length {wordlength}')\n",
     "\n",
     "# define our curse words or other words to remove\n",
     "curse_words = [\"shit\", \"piss\", \"fuck\", \"cunt\", \"cocksucker\", \"motherfucker\", \"tits\"] #rip george carlin\n",
-    "other_words_to_remove = [\"jesus\", \"george\", \"john\", 'james', 'york', 'david', 'google', 'robert', 'thomas','kill','trump' ]\n",
+    "other_words_to_remove = [\"jesus\", \"george\", \"john\", 'james', 'york', 'david', 'google', 'robert', 'thomas','kill','trump', 'stupid' ]\n",
     "# use the remove from dict func to take those ones out\n",
-    "word_dict = remove_from_dict(word_dict, curse_words) # from dictinary remove the curse words \n",
-    "word_dict = remove_from_dict(word_dict, other_words_to_remove) # from the dictionary remove the other words \n"
+    "for wordlength in word_dict:\n",
+    "    word_dict[wordlength] = remove_from_dict(word_dict[wordlength], curse_words)\n",
+    "    print(f'found after removing curse words {len(word_dict[wordlength])} words of length {wordlength}')\n",
+    "\n",
+    "for wordlength in word_dict:\n",
+    "    word_dict[wordlength] = remove_from_dict(word_dict[wordlength], other_words_to_remove)\n",
+    "    print(f'found after removing other words {len(word_dict[wordlength])}words of length {wordlength}')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -164,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -198,24 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a39620e6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m      \u001b[38;5;28;01mreturn\u001b[39;00m valid_words\n\u001b[1;32m     19\u001b[0m test_strings \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meltie\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdcoe\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcowr\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mearb\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 20\u001b[0m test_strings_valid_words \u001b[38;5;241m=\u001b[39m [find_valid_words(test_strings) ]\n",
-      "Cell \u001b[0;32mIn[18], line 14\u001b[0m, in \u001b[0;36mfind_valid_words\u001b[0;34m(input_string)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m perm \u001b[38;5;129;01min\u001b[39;00m permutations:\n\u001b[1;32m     13\u001b[0m     perm_word \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(perm)\n\u001b[0;32m---> 14\u001b[0m     result \u001b[38;5;241m=\u001b[39m check_word(perm_word)\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis not in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[1;32m     16\u001b[0m         valid_words\u001b[38;5;241m.\u001b[39mappend(perm_word)\n",
-      "Cell \u001b[0;32mIn[18], line 3\u001b[0m, in \u001b[0;36mcheck_word\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_word\u001b[39m(word):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_dict[wordlengths]\u001b[38;5;241m.\u001b[39mvalues:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#function to check if the word is in the dictionary (needed for function below)\n",
     "def check_word(word):\n",
@@ -241,24 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "07112780",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'root'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m solutions_list \u001b[38;5;241m=\u001b[39m find_valid_words(shuffled_list[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;66;03m# we find the valid words for the first word in the shuffled list\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(solutions_list)\n",
-      "Cell \u001b[0;32mIn[9], line 14\u001b[0m, in \u001b[0;36mfind_valid_words\u001b[0;34m(input_string)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m perm \u001b[38;5;129;01min\u001b[39;00m permutations:\n\u001b[1;32m     13\u001b[0m     perm_word \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(perm)\n\u001b[0;32m---> 14\u001b[0m     result \u001b[38;5;241m=\u001b[39m check_word(perm_word)\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis not in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[1;32m     16\u001b[0m         valid_words\u001b[38;5;241m.\u001b[39mappend(perm_word)\n",
-      "Cell \u001b[0;32mIn[9], line 3\u001b[0m, in \u001b[0;36mcheck_word\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_word\u001b[39m(word):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mroot\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'root'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
