--- a/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x16e6bba40>"
+       "<spacy.lang.en.English at 0x30136a0f0>"
       ]
      },
      "execution_count": 1,
@@ -132,9 +132,9 @@
       "found after removing curse words 2231 words of length 4\n",
       "found after removing curse words 3982 words of length 5\n",
       "found after removing curse words 6071 words of length 6\n",
-      "found after removing other words2228words of length 4\n",
-      "found after removing other words3978words of length 5\n",
-      "found after removing other words6066words of length 6\n"
+      "found after removing other words 2228words of length 4\n",
+      "found after removing other words 3978words of length 5\n",
+      "found after removing other words 6066words of length 6\n"
      ]
     }
    ],
@@ -210,10 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a39620e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m      \u001b[38;5;28;01mreturn\u001b[39;00m valid_words\n\u001b[1;32m     19\u001b[0m test_strings \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meltie\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdcoe\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcowr\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mearb\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 20\u001b[0m test_strings_valid_words \u001b[38;5;241m=\u001b[39m find_valid_words(test_strings)\n",
+      "Cell \u001b[0;32mIn[4], line 14\u001b[0m, in \u001b[0;36mfind_valid_words\u001b[0;34m(input_string)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m perm \u001b[38;5;129;01min\u001b[39;00m permutations:\n\u001b[1;32m     13\u001b[0m     perm_word \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(perm) \u001b[38;5;66;03m# @lynde todo, fix this\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m     result \u001b[38;5;241m=\u001b[39m check_word(perm_word)\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis not in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[1;32m     16\u001b[0m         valid_words\u001b[38;5;241m.\u001b[39mappend(perm_word)\n",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m, in \u001b[0;36mcheck_word\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_word\u001b[39m(word):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_dict[wordlengths]\u001b[38;5;241m.\u001b[39mvalues:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": [
     "#function to check if the word is in the dictionary (needed for function below)\n",
     "def check_word(word):\n",
