--- a/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3c67cb28",
    "metadata": {},
    "outputs": [
@@ -49,10 +49,10 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x30136a0f0>"
+       "<spacy.lang.en.English at 0x1775e6ea0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
       "found after removing curse words 6071 words of length 6\n",
       "found after removing other words 2228words of length 4\n",
       "found after removing other words 3978words of length 5\n",
-      "found after removing other words 6066words of length 6\n"
+      "found after removing other words 6065words of length 6\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
     "\n",
     "# define our curse words or other words to remove\n",
     "curse_words = [\"shit\", \"piss\", \"fuck\", \"cunt\", \"cocksucker\", \"motherfucker\", \"tits\"] #rip george carlin\n",
-    "other_words_to_remove = [\"jesus\", \"george\", \"john\", 'james', 'york', 'david', 'google', 'robert', 'thomas','kill','trump', 'stupid' ]\n",
+    "other_words_to_remove = [\"jesus\", \"george\", \"john\", 'james', 'york', 'david', 'google', 'robert', 'thomas','kill','trump', 'stupid', 'centre' ]\n",
     "# use the remove from dict func to take those ones out\n",
     "for wordlength in word_dict:\n",
     "    word_dict[wordlength] = remove_from_dict(word_dict[wordlength], curse_words)\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -210,21 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "a39620e6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m      \u001b[38;5;28;01mreturn\u001b[39;00m valid_words\n\u001b[1;32m     19\u001b[0m test_strings \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meltie\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdcoe\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcowr\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mearb\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 20\u001b[0m test_strings_valid_words \u001b[38;5;241m=\u001b[39m find_valid_words(test_strings)\n",
-      "Cell \u001b[0;32mIn[4], line 14\u001b[0m, in \u001b[0;36mfind_valid_words\u001b[0;34m(input_string)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m perm \u001b[38;5;129;01min\u001b[39;00m permutations:\n\u001b[1;32m     13\u001b[0m     perm_word \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(perm) \u001b[38;5;66;03m# @lynde todo, fix this\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m     result \u001b[38;5;241m=\u001b[39m check_word(perm_word)\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis not in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[1;32m     16\u001b[0m         valid_words\u001b[38;5;241m.\u001b[39mappend(perm_word)\n",
-      "Cell \u001b[0;32mIn[4], line 3\u001b[0m, in \u001b[0;36mcheck_word\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_word\u001b[39m(word):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_dict[wordlengths]\u001b[38;5;241m.\u001b[39mvalues:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes it's a list\n"
      ]
     }
    ],
@@ -240,24 +234,23 @@
     "def find_valid_words(input_string):\n",
     "     valid_words = []\n",
     "     permutations = itertools.permutations(input_string)\n",
-    "     for perm in permutations:\n",
-    "         perm_word = \"\".join(perm) # @lynde todo, fix this\n",
-    "         result = check_word(perm_word)\n",
-    "         if \"is not in the dictionary\" not in result:\n",
-    "             valid_words.append(perm_word)\n",
+    "     for valid in permutations:\n",
+    "         valid_word = \"\".join(valid)\n",
+    "         result = check_word(valid_word)\n",
+    "         if \"is in the dictionary\" in result:\n",
+    "             valid_words.append(valid_word)\n",
     "     return valid_words\n",
     "\n",
     "test_strings = ['eltie','dcoe','cowr','earb']\n",
-    "test_strings_valid_words = find_valid_words(test_strings)"
+    "    # print(check_word(string))\n",
+    "# test_dict = {key: None for key in test_strings}\n",
+    "# for key in test_strings:\n",
+    "#     test_dict[key] = find_valid_words(key)\n",
+    "if isinstance(test_strings, list):\n",
+    "    print(\"yes it's a list\")\n",
+    "else:\n",
+    "    print(\"no it's not a list\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07112780",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -268,6 +261,14 @@
     "\n",
     "Many anagrams have more than one response that is a valid solution. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07112780",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
