long awaited update but still buggy 	modified:   anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb

--- a/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3c67cb28",
    "metadata": {},
    "outputs": [
@@ -49,10 +49,10 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x168271df0>"
+       "<spacy.lang.en.English at 0x16c662660>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,9 @@
     "# and for the next few things it's gonna help to also have a df of these two lits named root and shuffled\n",
     "cat_full_list = pd.DataFrame({\n",
     "    \"root\" : full_list,\n",
-    "    \"shuffled\" : shuffled_list #must name it shuffled for the next function\n",
+    "    \"shuffled\" : shuffled_list,\n",
+    "    # id collumn which is a string of the index + 1 so that it's 3 digits long\n",
+    "    \"id\" : [str(i+1).zfill(3) for i in range(len(full_list))]    \n",
     "})\n",
     "cat_full_list= check_for_doubles(cat_full_list) # we check for any words that are the same in the root and shuffled columns \n",
     "cat_full_list= check_for_same(cat_full_list) # we check for any duplicates in the shuffled coll and reshuffle them"
@@ -197,14 +199,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "bccc3150",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "slice(None, 0, None)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m anagram_by_length \u001b[38;5;241m=\u001b[39m wordlist2length_dict(shuffled_list)\n\u001b[1;32m      6\u001b[0m anagram_sets \u001b[38;5;241m=\u001b[39m distribute_words(anagram_by_length, \u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m      7\u001b[0m anagram_sets \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgroup_a\u001b[39m\u001b[38;5;124m\"\u001b[39m : anagram_sets[:\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgroup_b\u001b[39m\u001b[38;5;124m\"\u001b[39m : anagram_sets[:\u001b[38;5;241m1\u001b[39m],\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgroup_c\u001b[39m\u001b[38;5;124m\"\u001b[39m : anagram_sets[:\u001b[38;5;241m2\u001b[39m],\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgroup_d\u001b[39m\u001b[38;5;124m\"\u001b[39m : anagram_sets[:\u001b[38;5;241m3\u001b[39m],\n\u001b[1;32m     12\u001b[0m })\n",
+      "\u001b[0;31mKeyError\u001b[0m: slice(None, 0, None)"
+     ]
+    }
+   ],
    "source": [
     "valid_words_gram = [find_valid_words(word, word_dict) for word in shuffled_list] # we find the valid words for each anagram in the shuffled list\n",
     "valid_words = [list(set(words)) for words in valid_words_gram] # we remove any duplicates in the valid words list and set to just the one list\n",
-    "cat_full_list['valid_words'] = valid_words # we add the valid words to the df"
+    "cat_full_list['valid_words'] = valid_words # we add the valid words to the df\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -220,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "5a7fe5ee",
    "metadata": {},
    "outputs": [
@@ -228,29 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['fphp', 'nlvgd', 'miycvz', 'ogxh', 'crlkz', 'gozdfd', 'hwca', 'drarw', 'nxpxhh', 'xesw', 'fpfvv', 'vksyut', 'kgzu', 'uehly', 'kndyhf', 'ezqw', 'ijnyb', 'wkxvaw', 'wmtt', 'jfagp', 'zynwqh', 'iuqr', 'ombwa', 'jcyqzd', 'mxcr', 'aeebr', 'jeanlx', 'vjlu', 'eddkr', 'pzcugt', 'jggj', 'solph', 'pgkdlx', 'xriu', 'eerki', 'ywcead', 'ykei', 'eniok', 'tpjmbs', 'lyma', 'aeegr', 'kzhxaq', 'xczb', 'ufywc', 'pswcik', 'mmeb', 'isoeg', 'klkcjp', 'vogb', 'hfwye', 'zoedky', 'eobk', 'jiopv', 'uxerya', 'zqzh', 'natdv', 'twcuwm', 'ykbh', 'jogya', 'nevthx']\n"
+      "['shbm', 'cqroa', 'uxiwsm', 'etnc', 'eslzw', 'lxngca', 'eevt', 'ummxp', 'qzmkzh', 'ngqh', 'gpnxd', 'oqlpfm', 'bkna', 'qpckv', 'cefulp', 'vxsm', 'rhqqb', 'gcypmu', 'ewdg', 'aloni', 'vbaqsk', 'mmlt', 'ebcti', 'xpfwyv', 'lsff', 'dkuml', 'pvjfqe', 'wycv', 'yanar', 'zfbgrg', 'qjpu', 'ileuw', 'bbaawq', 'iigz', 'kkwbq', 'xhscze', 'mvnq', 'xqxxo', 'mrbmyi', 'arrg', 'qplxe', 'fraina', 'rilc', 'qbkzv', 'fuarad', 'abvp', 'kpvuv', 'fagxwa', 'gfzr', 'cbadi', 'sfzdiq', 'josp', 'jxwpd', 'xnhldy', 'omic', 'rqllr', 'qnfjrv', 'kgal', 'rtfoq', 'dyxnft']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{4: [['ezqw', 'mmeb', 'xriu', 'iuqr', 'jggj'],\n",
-       "  ['fphp', 'kgzu', 'ykei', 'hwca', 'lyma'],\n",
-       "  ['eobk', 'ogxh', 'mxcr', 'vjlu', 'vogb'],\n",
-       "  ['ykbh', 'xesw', 'xczb', 'wmtt', 'zqzh']],\n",
-       " 5: [['eniok', 'uehly', 'ufywc', 'isoeg', 'natdv'],\n",
-       "  ['crlkz', 'drarw', 'nlvgd', 'jiopv', 'fpfvv'],\n",
-       "  ['eddkr', 'solph', 'aeegr', 'ijnyb', 'aeebr'],\n",
-       "  ['hfwye', 'eerki', 'jfagp', 'jogya', 'ombwa']],\n",
-       " 6: [['ywcead', 'pswcik', 'zoedky', 'uxerya', 'tpjmbs'],\n",
-       "  ['kndyhf', 'kzhxaq', 'wkxvaw', 'nevthx', 'pgkdlx'],\n",
-       "  ['gozdfd', 'zynwqh', 'pzcugt', 'vksyut', 'twcuwm'],\n",
-       "  ['klkcjp', 'jcyqzd', 'nxpxhh', 'miycvz', 'jeanlx']]}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -272,6 +268,8 @@
     "        anagram_sets[length] = [words[i::num_set] for i in range(num_set)]\n",
     "    return anagram_sets\n",
     "\n",
+    "\n",
+    "\n",
     "# create a test list with 20 words of length 4, 5, and 6\n",
     "import random\n",
     "import string\n",
@@ -285,12 +283,25 @@
     "\n",
     "print(test_list)\n",
     "anagram_by_length = wordlist2length_dict(test_list)\n",
-    "distribute_words(anagram_by_length, 4)  \n"
+    "test_dw = distribute_words(anagram_by_length, 4)  \n",
+    "\n",
+    "# function to join the sets into unique collumns named group_a-d based off of the rows of the df\n",
+    "def join_sets_into_groups(anagram_sets):\n",
+    "    test_group = pd.DataFrame()\n",
+    "    for i in range(4):\n",
+    "        group = pd.DataFrame()\n",
+    "        for length, words in anagram_sets.items():\n",
+    "            group[f'length_{length}'] = words[i]\n",
+    "        test_group = pd.concat([test_group, group], axis=1)\n",
+    "    return test_group\n",
+    "\n",
+    "# each row of a set is joined into a new list, joined into a new df\n",
+    "test_group = join_sets_into_groups(test_dw)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "0358a215",
    "metadata": {},
    "outputs": [],
@@ -313,10 +324,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "53f94913",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable int object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 72\u001b[0m\n\u001b[1;32m     59\u001b[0m     set_run \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mset_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mrun_number\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [\n\u001b[1;32m     61\u001b[0m         {\n\u001b[1;32m     62\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: word[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m shuffled_list\n\u001b[1;32m     70\u001b[0m     ]\n\u001b[0;32m---> 72\u001b[0m test_file \u001b[38;5;241m=\u001b[39m format_js_stimuli(test_dw)\n",
+      "Cell \u001b[0;32mIn[9], line 25\u001b[0m, in \u001b[0;36mformat_js_stimuli\u001b[0;34m(sets)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m idx \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:  \n\u001b[1;32m     24\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m word_type, word_pair \u001b[38;5;241m=\u001b[39m row\n\u001b[1;32m     26\u001b[0m original, anagram \u001b[38;5;241m=\u001b[39m word_pair\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m js_entry \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(idx\u001b[38;5;250m \u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mzfill(\u001b[38;5;241m3\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# Assign unique IDs starting from 001\u001b[39;00m\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m: word_type,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mset\u001b[39m\u001b[38;5;124m\"\u001b[39m: set_name,\n\u001b[1;32m     33\u001b[0m }\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
+     ]
+    }
+   ],
    "source": [
     "# making a distributing function to spread the words across the four groups\n",
     "# def distribute_words(word_list, num_sets):\n",
