SetA1 is running correctly with the new stimulus file however we will need to start getting the correct % as an object for the final slide showing correct amount. 	modified:   anag_stats_/MakingAnagrams/new_file_maker.ipynb 	modified:   anag_stats_/MakingAnagrams/rand_full_list.json 	modified:   anag_stats_/MakingAnagrams/stimuli.js 	modified:   docs/SetA1/experiment.js 	modified:   docs/SetA1/stimuli.js

--- a/anag_stats_/MakingAnagrams/new_file_maker.ipynb
+++ b/anag_stats_/MakingAnagrams/new_file_maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4   there    ehter   5  ['ether', 'there', 'three']       5  SetA"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
      "output_type": "stream",
      "text": [
       "2400\n",
-      "{'id': '7', 'type': '4', 'anagram': 'tsju', 'correct': 'just', 'valid': \"['just']\", 'set': 'SetA', 'set_run': 'SetA1'}\n"
+      "{'id': '134', 'type': '5', 'anagram': 'lseta', 'correct': 'least', 'valid': \"['stale', 'steal', 'least', 'lates', 'stael', 'slate', 'tesla']\", 'set': 'SetA', 'setRun': 'SetA1'}\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
     "                \"correct\": row['root'],\n",
     "                \"valid\": row['valid_words'],\n",
     "                \"set\": row['Set'],\n",
-    "                \"set_run\": row['SetRun'],\n",
+    "                \"setRun\": row['SetRun'],\n",
     "            }\n",
     "        js_stimuli.append(js_entry) \n",
     "    return js_stimuli\n",
